# youtube-uploader

./: .env.example  .gitignore  README.md  VALIDATION_CHECKLIST.md  ai_metadata_generator.py  app.py  config.py  oauth_manager.py  pyproject.toml  requirements.txt  start.bat  start.sh  youtube_client.py
.streamlit/: config.toml
assets/: README.md
data/tokens/: .gitkeep
docs/: AI_METADATA_GUIDE.md  API_SETUP.md  ENV_SETUP.md  SETUP.md  THUMBNAIL_GUIDE.md  TROUBLESHOOTING.md  UPLOAD_OPTIMIZATIONS.md
logs/: .gitkeep
plans/: youtube-uploader-plan.md
